# p-adic-memory

./: Coherence-Era.md  DualSubstrateBaselines.ipynb  DualSubstrateColabTests.ipynb  DualSubstrateTests.ipynb  Dual_substrate_baselines.ipynb  EthicsSim.ipynb  Makefile  Photonic.ipynb  README.md  RESULTS.md  Recursive_ethics_reasoning.ipynb  THEORY.md  Thermodynamics_Tetra.ipynb  Tri-Architecture.md  bench.py  dataset.jsonl  demo.py  dual_substrate_adapter.py  p-adic-memory.ipynb  pyproject.toml  requirements-lock.txt  requirements.min.txt  results.csv  score.py  streamlit_app.py  versus.py
Benchmarks/: longbench_baseline.csv  longbench_baseline.json  longbench_dual_substrate.csv  longbench_dual_substrate.json  ruler_baseline.csv  ruler_baseline.json  ruler_dual_substrate.csv  ruler_dual_substrate.json
archive/: tethraddynamics_clean (7).ipynb
archive/archive_notebooks/: DualSubstrateBaselines.ipynb  EthicsSim_executed.ipynb  Photonic.ipynb  Proof_of_Ethics_Agentic Mesh.md
logs/: baseline_transformer_20251011T162206Z.jsonl  baseline_transformer_20251011T200053Z.jsonl  baseline_transformer_20251011T204728Z.jsonl  baseline_transformer_20251011T234633Z.jsonl  demo.jsonl  dual_substrate_20251011T162200Z.jsonl  dual_substrate_20251011T200058Z.jsonl  dual_substrate_20251011T204735Z.jsonl  dual_substrate_20251011T234622Z.jsonl  dual_substrate_20251012T030325Z.jsonl  lstm_baseline_20251012T030339Z.jsonl  nolima_baseline_20251011T162209Z.jsonl  nolima_baseline_20251011T200053Z.jsonl  nolima_baseline_20251011T204738Z.jsonl  nolima_baseline_20251011T234649Z.jsonl
tests/: conftest.py  test_baselines.py  test_cases.json  test_dataset.py  test_dual_substrate.py  test_import.py  test_simulation.py  test_streamlit_spec.py
(+14 files in other folders)
